# AI

./: .gitignore  README.md  pyproject.toml
lab1/: main.ipynb
lab2/: main.ipynb
lab3/: main.ipynb
lab4/: main.ipynb
lab5/: main.ipynb
